@@ -1,6 +1,18 @@
 
 * master *
 
+* Add activity_stats method that mimics the SQL Server Activity Monitor. Fixes #146 [Joe Rafaniello]
+
+* Add methods for sqlserver's #product_version, #product_level, #edition and include them in inspect.
+  Fixes #145 [Joe Rafaniello]
+  
+* Handle statements that cannot be retried on a new database connection by not reconnecting. 
+  Fixes #147 [Joe Rafaniello]
+  
+* Added connection#spid for debugging. Fixes #144 [Joe Rafaniello]
+
+* Add ENV['TEST_FILES'] to Rakefile for easy single case tests. [Joe Rafaniello]
+
 * Pass ActiveRecord tests. Made windowed distinct pass all orders to groups.
   - test_limited_eager_with_multiple_order_columns
   - test_limited_eager_with_order
